src/components/main: fix overlapping navbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,3 @@ root {
     min-height: 70px;
     
 }
-#main{
-    padding-top: 75px;
-}
